# ShepardTTS

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  __init__.py  app.py  create_dataset.py  docker-compose.example.yml  docker-compose.yml  get_deployable_zip.sh  inference.py  overrides.py  pyproject.toml  settings.py  update.sh  utils.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_docker_image.yml  python_linters.yml  python_pytest.yml
code/: app.py  app_helpers.py  character_mappings.py  create_character_embeddings.py  create_dataset.py  inference.py  settings.py  utils.py
shepardtts/: __init__.py  __version__.py  app.py  app_helpers.py  character_mappings.py  create_character_embeddings.py  create_dataset.py  inference.py  overrides.py  settings.py  train.py  utils.py
tests/: __init__.py  test_app.py
