[tool.poetry]
name = "shepardtts"
version = "0.1.0"
description = "ShepardTTS is a fine-tuned XTTS model, trained on paired dialogue/audio samples from the Mass Effect 2 and Mass Effect 3 base games."
authors = ["Patrick Darwinkel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
torch = "2.2.0"
torchaudio = "2.2.0"
pandas = "1.5.3"
numpy = "1.26.4"
tts = "0.22.0"
clean-text = "0.6.0"
num2words = "0.5.13"
unidecode = "1.3.8"
deepspeed = "0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.2.2"
mypy = "1.8.0"
poetry-plugin-export = "1.6.0"

[tool.poetry.group.train.dependencies]
trainer = "0.0.36"
openpyxl = "3.1.2"
datasets = "2.17.1"
soundfile = "0.12.1"
accelerate = "0.27.2"

[tool.poetry.group.deploy.dependencies]
gradio = "4.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001"]


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
no_implicit_reexport = false
explicit_package_bases = true