[tool.poetry]
name = "shepardtts"
version = "0.0.1-dev"
description = "ShepardTTS is a fine-tuned XTTS model, trained on paired dialogue/audio samples from the Mass Effect 2 and Mass Effect 3 base games."
authors = ["Patrick Darwinkel"]
readme = "README.md"
packages = [{include = "shepardtts"}]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
metadata = true
tagged-metadata = true
dirty = true
bump = true

# Build configuration
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

# Poetry dependency configuration
[tool.poetry.dependencies]
python = "^3.11,<3.12"
torch = "2.2.1"
torchaudio = "2.2.1"
pandas = "1.5.3"
numpy = "1.26.4"
tts = "0.22.0"
clean-text = "0.6.0"
num2words = "0.5.13"
unidecode = "1.3.8"
deepspeed = "0.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.3.3"
mypy = "1.9.0"
poetry-plugin-export = "1.7.1"
pytest = "8.1.1"
pytest-cov = "4.1.0"

[tool.poetry.group.train.dependencies]
trainer = "0.0.36"
openpyxl = "3.1.2"
datasets = "2.18.0"
soundfile = "0.12.1"
accelerate = "0.28.0"

[tool.poetry.group.deploy.dependencies]
gradio = "4.21.0"

# Code quality tooling configuration
[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001", "T201"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["PLR0913"] # Not relevant for Gradio
"train.py" = ["PTH"] # Fix some other time
"test_*.py" = ["S101"] # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true